--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "typeorm":"ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.29"
