--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-     "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -34,5 +35,4 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.29"
   }
-  
 }
