--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.29"
