--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
